--- a/app/src/main/res/layout/item_task_card.xml
+++ b/app/src/main/res/layout/item_task_card.xml
@@ -18,9 +18,10 @@
             android:id="@+id/textViewTaskName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintHeight_min="48dp"
             android:text="@string/task_name"
             android:textStyle="bold"
-            android:layout_margin="8dp"
+            android:layout_margin="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnExpandCollapse"
@@ -31,6 +32,7 @@
         <Button
             android:id="@+id/btnExpandCollapse"
             android:layout_width="wrap_content"
+            app:layout_constraintHeight_min="48dp"
             android:minHeight="48dp"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
@@ -41,7 +43,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/textViewTaskName"
             android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
-            android:gravity="center" />
+            android:gravity="center"
+            android:contentDescription="@string/expand_collapse_button_description" />
+
 
         <!-- Attachment URI (ImageView) -->
         <ImageView
@@ -52,8 +56,9 @@
             android:maxHeight="300dp"
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_no_photography_24"
-            android:layout_margin="8dp"
+            android:layout_margin="4dp"
             android:visibility="visible"
+            android:padding="0dp"
             app:layout_constraintTop_toBottomOf="@id/textViewTaskName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -144,6 +149,7 @@
         <Button
             android:id="@+id/buttonEdit"
             android:layout_width="0dp"
+            app:layout_constraintWidth_max="320dp"
             android:layout_height="wrap_content"
             android:text="@string/edit"
             android:layout_margin="8dp"
