--- a/app/src/main/res/layout/dialog_add_subtask.xml
+++ b/app/src/main/res/layout/dialog_add_subtask.xml
@@ -10,6 +10,7 @@
         android:id="@+id/editTextSubTaskName"
         android:autofillHints=""
         android:minHeight="48dp"
+        app:layout_constraintWidth_max="488dp"
         android:maxWidth="488dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
