--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -16,9 +16,10 @@
             android:layout_width="0dp"
             android:autofillHints=""
             android:minHeight="48dp"
-            android:maxWidth="488dp"
+            android:maxWidth="500dp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
+            app:layout_constraintWidth_max="488dp"
             android:hint="@string/edit_text_task_name_hint"
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:inputType="text"
@@ -55,6 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            app:layout_constraintWidth_max="320dp"
             android:text="@string/button_attach_photo"
             app:layout_constraintTop_toBottomOf="@id/imageViewPhoto"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +86,7 @@
             android:id="@+id/buttonAddSubTask"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintWidth_max="320dp"
             android:text="@string/button_add_subtask"
             android:layout_marginBottom="10dp"
             app:layout_constraintTop_toBottomOf="@id/recyclerViewSubtasks"
@@ -105,6 +108,7 @@
         <Button
             android:id="@+id/buttonCompletionDate"
             android:layout_width="0dp"
+            app:layout_constraintWidth_max="320dp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="@string/button_select_completion_date"
@@ -168,6 +172,7 @@
             android:layout_width="0dp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
+            app:layout_constraintWidth_max="320dp"
             android:text="@string/button_select_tags"
             app:layout_constraintTop_toBottomOf="@id/chipGroupTags"
             app:layout_constraintStart_toStartOf="parent"
@@ -190,6 +195,7 @@
             android:layout_width="0dp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
+            app:layout_constraintWidth_max="320dp"
             android:text="@string/button_save_task"
             android:textColor="?attr/colorOnPrimary"
             android:backgroundTint="?attr/colorPrimary"
