--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,6 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="0dp"
     android:paddingTop="8dp"
+    android:paddingLeft="3dp"
+    android:paddingRight="3dp"
     android:paddingBottom="8dp">
 
     <TextView
