--- a/app/src/main/res/layout/item_task_card.xml
+++ b/app/src/main/res/layout/item_task_card.xml
@@ -66,14 +66,15 @@
         <!-- Completion Date -->
         <TextView
             android:id="@+id/textViewCompletionDate"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/completion_date"
             android:textAppearance="?attr/textAppearanceBody1"
             android:layout_margin="8dp"
             android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@id/imageViewAttachment"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <!-- Priority -->
         <TextView
@@ -99,7 +100,8 @@
             android:layout_margin="8dp"
             android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@id/textViewPriority"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent="1"/>
 
         <ListView
             android:id="@+id/listViewSubtasks"
