--- a/app/src/main/res/layout/item_task_card.xml
+++ b/app/src/main/res/layout/item_task_card.xml
@@ -10,7 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="16dp">
 
         <!-- Task Name -->
@@ -103,20 +103,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintWidth_percent="1"/>
 
-        <ListView
+        <com.logbook.todo.ui.task_list.CustomListView
             android:id="@+id/listViewSubtasks"
             android:layout_width="match_parent"
-            app:layout_constraintHeight_min="160dp"
+            app:layout_constraintHeight_min="120dp"
             app:layout_constraintHeight_max="300dp"
             android:layout_height="60dp"
-        android:maxHeight="300dp"
-        android:scrollbars="vertical"
-        android:visibility="visible"
-        android:layout_margin="0dp"
-        android:padding="0dp"
-        app:layout_constraintTop_toBottomOf="@id/textViewSubTask"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            android:maxHeight="300dp"
+            android:scrollbars="vertical"
+            android:visibility="visible"
+            android:layout_margin="0dp"
+            android:padding="0dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewSubTask"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
 
